# lc3box

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  coverage.yml  security.yml
examples/: hello-world.asm
lc3as/: Cargo.toml  README.md
lc3as/src/: codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
lc3as/tests/: cli.rs
lc3box/: Cargo.toml  README.md
lc3box/src/: lib.rs  main.rs
lc3box/tests/: cli.rs
lc3core/: Cargo.toml  README.md
lc3core/src/: lib.rs  memory.rs  object.rs  opcode.rs  pseudo.rs  register.rs  trap.rs
lc3dbg/: Cargo.toml  README.md
lc3dbg/src/: debug.rs  lib.rs  repl.rs
lc3debug/: Cargo.toml  README.md
lc3debug/src/: cmd.rs  lib.rs  repl.rs
lc3dsm/: Cargo.toml  README.md
lc3dsm/src/: instruction.rs  lib.rs  listing.rs  main.rs
lc3dsm/tests/: cli.rs  round_trip.rs
lc3vm/: Cargo.toml  README.md
lc3vm/benches/: interpreter.rs
lc3vm/src/: code.rs  console.rs  error.rs  instructions.rs  lib.rs  main.rs  memory.rs  registers.rs  vm.rs
src/: emulator.rs  main.rs
src/emulator/: instruction.rs  registers.rs  vm.rs
src/emulator/instruction/: opcode.rs  trapcode.rs
src/hardware/: register.rs
