[workspace]
resolver = "2"
members = ["lc3core", "lc3vm", "lc3as", "lc3dsm", "lc3debug", "lc3box"]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kobby-pentangeli/lc3box"
homepage = "https://github.com/kobby-pentangeli/lc3box"
readme = "README.md"

[workspace.dependencies]
lc3core = { path = "lc3core", version = "0.7.0" }
lc3vm = { path = "lc3vm", version = "0.7.0" }
lc3as = { path = "lc3as", version = "0.7.0" }
lc3dsm = { path = "lc3dsm", version = "0.7.0" }
lc3debug = { path = "lc3debug", version = "0.7.0" }

thiserror = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
