[package]
name = "lc3box"
description = "Unified command-line driver and umbrella library for the LC-3 toolbox: run, assemble, and disassemble Little Computer 3 programs"
keywords = ["lc3", "assembly", "emulator", "assembler", "toolbox"]
categories = ["emulators", "command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "lc3box"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
kernel = ["dep:lc3core"]
vm = ["dep:lc3vm", "kernel"]
asm = ["dep:lc3as", "kernel"]
dsm = ["dep:lc3dsm", "kernel"]
full = ["vm", "asm", "dsm"]
cli = ["full", "dep:clap"]

[dependencies]
lc3core = { workspace = true, optional = true }
lc3vm = { workspace = true, optional = true }
lc3as = { workspace = true, optional = true }
lc3dsm = { workspace = true, optional = true }

clap = { version = "4.6", features = ["derive"], optional = true }
