[package]
name = "lc3core"
description = "Shared instruction-set kernel for the LC-3 toolbox: opcodes, registers, traps, the memory map, and the object-file format"
keywords = ["lc3", "isa", "assembly", "emulator", "compiler"]
categories = ["emulators", "compilers"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
thiserror.workspace = true
