[package]
name = "lc3vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
lc3core.workspace = true

thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
termios.workspace = true

[dev-dependencies]
criterion.workspace = true
lc3as.workspace = true

[[bench]]
name = "interpreter"
harness = false
