[package]
name = "lc3vm"
description = "Virtual machine for the LC-3 that executes assembled object files against the full instruction set"
keywords = ["lc3", "vm", "emulator", "interpreter", "assembly"]
categories = ["emulators"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
lc3core.workspace = true

thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
termios = "0.3"

[dev-dependencies]
lc3as.workspace = true

criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "interpreter"
harness = false
